--- a/uimodule/webapp/index.html
+++ b/uimodule/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Title of com.myorg.myUI5App</title>
+    <title>Title of oft.fiori.crudBatch</title>
     <style>
         html, body, body > div, #container, #container-uiarea {
             height: 100%;
@@ -15,7 +15,7 @@
         src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_fiori_3"
         data-sap-ui-resourceroots='{
-            "com.myorg.myUI5App": "./"
+            "oft.fiori.crudBatch": "./"
         }'
         data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compatVersion="edge"
@@ -26,9 +26,9 @@
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
         data-sap-ui-component
-        data-name="com.myorg.myUI5App"
+        data-name="oft.fiori.crudBatch"
         data-id="container"
-        data-settings='{"id" : "com.myorg.myUI5App"}'
+        data-settings='{"id" : "oft.fiori.crudBatch"}'
         data-handle-validation="true"
     ></div>
 </body>
