--- a/uimodule/webapp/test/unit/unitTests.qunit.html
+++ b/uimodule/webapp/test/unit/unitTests.qunit.html
@@ -2,25 +2,22 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Integration tests for Basic Template</title>
+	<title>Unit tests for oft.fiori.crudBatch</title>
 
 	<script id="sap-ui-bootstrap"
 		src="../../../resources/sap-ui-core.js"
-		data-sap-ui-theme="sap_fiori_3"
-		data-sap-ui-resourceroots='{			
-			"oft.fiori.crudBatch": "../../"			
-		}'
-		data-sap-ui-animation="false"
-		data-sap-ui-compatVersion="edge"
-		data-sap-ui-async="true">
+		data-sap-ui-resourceroots='{
+			"oft/fiori/crudBatch": "../../"			
+		}'>
 	</script>
 
 	<link rel="stylesheet" type="text/css" href="../../../resources/sap/ui/thirdparty/qunit-2.css">
 
 	<script src="../../../resources/sap/ui/thirdparty/qunit-2.js"></script>
 	<script src="../../../resources/sap/ui/qunit/qunit-junit.js"></script>
+	<script src="../../../resources/sap/ui/qunit/qunit-coverage.js"></script>
 
-	<script src="opaTests.qunit.js"></script>
+	<script src="unitTests.qunit.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
